smtlib/smtlibParser.java
// Generated from C:\Users\Steinway Wu\Documents\GitHub\SMTFrontEnd\smtlib\smtlib.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class smtlibParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__72=1, T__71=2, T__70=3, T__69=4, T__68=5, T__67=6, T__66=7, T__65=8, 
		T__64=9, T__63=10, T__62=11, T__61=12, T__60=13, T__59=14, T__58=15, T__57=16, 
		T__56=17, T__55=18, T__54=19, T__53=20, T__52=21, T__51=22, T__50=23, 
		T__49=24, T__48=25, T__47=26, T__46=27, T__45=28, T__44=29, T__43=30, 
		T__42=31, T__41=32, T__40=33, T__39=34, T__38=35, T__37=36, T__36=37, 
		T__35=38, T__34=39, T__33=40, T__32=41, T__31=42, T__30=43, T__29=44, 
		T__28=45, T__27=46, T__26=47, T__25=48, T__24=49, T__23=50, T__22=51, 
		T__21=52, T__20=53, T__19=54, T__18=55, T__17=56, T__16=57, T__15=58, 
		T__14=59, T__13=60, T__12=61, T__11=62, T__10=63, T__9=64, T__8=65, T__7=66, 
		T__6=67, T__5=68, T__4=69, T__3=70, T__2=71, T__1=72, T__0=73, NUMERAL=74, 
		DECIMAL=75, HEXADECIMAL=76, BINARY=77, STRING=78, KEYWORD=79, WS=80, SYMBOL=81, 
		COMMENT=82;
	public static final String[] tokenNames = {
		"<INVALID>", "':version'", "':regular-output-channel'", "':produce-models'", 
		"':values'", "'push'", "'unsupported'", "'set-option'", "'false'", "':authors'", 
		"'get-assertions'", "'immediate-exit'", "':produce-unsat-cores'", "'STRING'", 
		"'unknown'", "':produce-assignments'", "':produce-proofs'", "'logic'", 
		"'declare-fun'", "'NUMERAL'", "')'", "'sat'", "'DECIMAL'", "'_'", "'memout'", 
		"':name'", "':funs'", "'unsat'", "':notes'", "'continued-execution'", 
		"'assert'", "':error-behavior'", "'!'", "'define-sort'", "'define-fun'", 
		"':sorts-description'", "'get-info'", "'get-assignment'", "':theories'", 
		"':funs-description'", "'exit'", "'('", "'theory'", "'set-info'", "'as'", 
		"'incomplete'", "':extensions'", "'get-option'", "':sorts'", "'let'", 
		"':print-success'", "'declare-sort'", "'true'", "'error'", "':verbosity'", 
		"'get-unset-core'", "':expand-definitions'", "'pop'", "':status'", "'check-sat'", 
		"'set-logic'", "':diagnostic-output-channel'", "':all-statistics'", "'get-proof'", 
		"'success'", "'forall'", "'par'", "':definition'", "':interactive-mode'", 
		"'exists'", "':language'", "':reason-unknown'", "'get-value'", "':random-seed'", 
		"NUMERAL", "DECIMAL", "HEXADECIMAL", "BINARY", "STRING", "KEYWORD", "WS", 
		"SYMBOL", "COMMENT"
	};
	public static final int
		RULE_spec_constant = 0, RULE_s_expr = 1, RULE_identifier = 2, RULE_sort = 3, 
		RULE_attribute_value = 4, RULE_attribute = 5, RULE_qual_identifier = 6, 
		RULE_var_binding = 7, RULE_sorted_var = 8, RULE_term = 9, RULE_sort_symbol_decl = 10, 
		RULE_meta_spec_constant = 11, RULE_fun_symbol_decl = 12, RULE_par_fun_symbol_decl = 13, 
		RULE_theory_decl = 14, RULE_theory_attribute = 15, RULE_logic_attribute = 16, 
		RULE_logic = 17, RULE_b_value = 18, RULE_option = 19, RULE_info_flag = 20, 
		RULE_command = 21, RULE_script = 22, RULE_gen_response = 23, RULE_error_behavior = 24, 
		RULE_reason_unknown = 25, RULE_status = 26, RULE_info_response = 27, RULE_get_info_response = 28, 
		RULE_check_sat_response = 29, RULE_get_assertions_response = 30, RULE_proof = 31, 
		RULE_get_proof_response = 32, RULE_get_unsat_core_response = 33, RULE_valuation_pair = 34, 
		RULE_get_value_response = 35, RULE_t_valuation_pair = 36, RULE_get_assignment_response = 37, 
		RULE_get_option_response = 38;
	public static final String[] ruleNames = {
		"spec_constant", "s_expr", "identifier", "sort", "attribute_value", "attribute", 
		"qual_identifier", "var_binding", "sorted_var", "term", "sort_symbol_decl", 
		"meta_spec_constant", "fun_symbol_decl", "par_fun_symbol_decl", "theory_decl", 
		"theory_attribute", "logic_attribute", "logic", "b_value", "option", "info_flag", 
		"command", "script", "gen_response", "error_behavior", "reason_unknown", 
		"status", "info_response", "get_info_response", "check_sat_response", 
		"get_assertions_response", "proof", "get_proof_response", "get_unsat_core_response", 
		"valuation_pair", "get_value_response", "t_valuation_pair", "get_assignment_response", 
		"get_option_response"
	};

	@Override
	public String getGrammarFileName() { return "smtlib.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public smtlibParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Spec_constantContext extends ParserRuleContext {
		public TerminalNode HEXADECIMAL() { return getToken(smtlibParser.HEXADECIMAL, 0); }
		public TerminalNode NUMERAL() { return getToken(smtlibParser.NUMERAL, 0); }
		public TerminalNode BINARY() { return getToken(smtlibParser.BINARY, 0); }
		public TerminalNode DECIMAL() { return getToken(smtlibParser.DECIMAL, 0); }
		public TerminalNode STRING() { return getToken(smtlibParser.STRING, 0); }
		public Spec_constantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spec_constant; }
	}

	public final Spec_constantContext spec_constant() throws RecognitionException {
		Spec_constantContext _localctx = new Spec_constantContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_spec_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_la = _input.LA(1);
			if ( !(((((_la - 74)) & ~0x3f) == 0 && ((1L << (_la - 74)) & ((1L << (NUMERAL - 74)) | (1L << (DECIMAL - 74)) | (1L << (HEXADECIMAL - 74)) | (1L << (BINARY - 74)) | (1L << (STRING - 74)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class S_exprContext extends ParserRuleContext {
		public S_exprContext s_expr(int i) {
			return getRuleContext(S_exprContext.class,i);
		}
		public List<S_exprContext> s_expr() {
			return getRuleContexts(S_exprContext.class);
		}
		public TerminalNode KEYWORD() { return getToken(smtlibParser.KEYWORD, 0); }
		public TerminalNode SYMBOL() { return getToken(smtlibParser.SYMBOL, 0); }
		public Spec_constantContext spec_constant() {
			return getRuleContext(Spec_constantContext.class,0);
		}
		public S_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s_expr; }
	}

	public final S_exprContext s_expr() throws RecognitionException {
		S_exprContext _localctx = new S_exprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_s_expr);
		int _la;
		try {
			setState(91);
			switch (_input.LA(1)) {
			case NUMERAL:
			case DECIMAL:
			case HEXADECIMAL:
			case BINARY:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(80); spec_constant();
				}
				break;
			case SYMBOL:
				enterOuterAlt(_localctx, 2);
				{
				setState(81); match(SYMBOL);
				}
				break;
			case KEYWORD:
				enterOuterAlt(_localctx, 3);
				{
				setState(82); match(KEYWORD);
				}
				break;
			case 41:
				enterOuterAlt(_localctx, 4);
				{
				setState(83); match(41);
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 41)) & ~0x3f) == 0 && ((1L << (_la - 41)) & ((1L << (41 - 41)) | (1L << (NUMERAL - 41)) | (1L << (DECIMAL - 41)) | (1L << (HEXADECIMAL - 41)) | (1L << (BINARY - 41)) | (1L << (STRING - 41)) | (1L << (KEYWORD - 41)) | (1L << (SYMBOL - 41)))) != 0)) {
					{
					{
					setState(84); s_expr();
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(90); match(20);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public List<TerminalNode> NUMERAL() { return getTokens(smtlibParser.NUMERAL); }
		public TerminalNode NUMERAL(int i) {
			return getToken(smtlibParser.NUMERAL, i);
		}
		public TerminalNode SYMBOL() { return getToken(smtlibParser.SYMBOL, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		int _la;
		try {
			setState(103);
			switch (_input.LA(1)) {
			case SYMBOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(93); match(SYMBOL);
				}
				break;
			case 41:
				enterOuterAlt(_localctx, 2);
				{
				setState(94); match(41);
				setState(95); match(23);
				setState(96); match(SYMBOL);
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(97); match(NUMERAL);
					}
					}
					setState(100); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NUMERAL );
				setState(102); match(20);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SortContext extends ParserRuleContext {
		public List<SortContext> sort() {
			return getRuleContexts(SortContext.class);
		}
		public SortContext sort(int i) {
			return getRuleContext(SortContext.class,i);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public SortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sort; }
	}

	public final SortContext sort() throws RecognitionException {
		SortContext _localctx = new SortContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sort);
		int _la;
		try {
			setState(115);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(105); identifier();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(106); match(41);
				setState(107); identifier();
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(108); sort();
					}
					}
					setState(111); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==41 || _la==SYMBOL );
				setState(113); match(20);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attribute_valueContext extends ParserRuleContext {
		public S_exprContext s_expr(int i) {
			return getRuleContext(S_exprContext.class,i);
		}
		public List<S_exprContext> s_expr() {
			return getRuleContexts(S_exprContext.class);
		}
		public TerminalNode SYMBOL() { return getToken(smtlibParser.SYMBOL, 0); }
		public Spec_constantContext spec_constant() {
			return getRuleContext(Spec_constantContext.class,0);
		}
		public Attribute_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute_value; }
	}

	public final Attribute_valueContext attribute_value() throws RecognitionException {
		Attribute_valueContext _localctx = new Attribute_valueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attribute_value);
		int _la;
		try {
			setState(127);
			switch (_input.LA(1)) {
			case SYMBOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(117); match(SYMBOL);
				}
				break;
			case NUMERAL:
			case DECIMAL:
			case HEXADECIMAL:
			case BINARY:
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(118); spec_constant();
				}
				break;
			case 41:
				enterOuterAlt(_localctx, 3);
				{
				setState(119); match(41);
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 41)) & ~0x3f) == 0 && ((1L << (_la - 41)) & ((1L << (41 - 41)) | (1L << (NUMERAL - 41)) | (1L << (DECIMAL - 41)) | (1L << (HEXADECIMAL - 41)) | (1L << (BINARY - 41)) | (1L << (STRING - 41)) | (1L << (KEYWORD - 41)) | (1L << (SYMBOL - 41)))) != 0)) {
					{
					{
					setState(120); s_expr();
					}
					}
					setState(125);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(126); match(20);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public Attribute_valueContext attribute_value() {
			return getRuleContext(Attribute_valueContext.class,0);
		}
		public TerminalNode KEYWORD() { return getToken(smtlibParser.KEYWORD, 0); }
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_attribute);
		try {
			setState(132);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(129); match(KEYWORD);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130); match(KEYWORD);
				setState(131); attribute_value();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Qual_identifierContext extends ParserRuleContext {
		public SortContext sort() {
			return getRuleContext(SortContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Qual_identifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qual_identifier; }
	}

	public final Qual_identifierContext qual_identifier() throws RecognitionException {
		Qual_identifierContext _localctx = new Qual_identifierContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_qual_identifier);
		try {
			setState(141);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134); identifier();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(135); match(41);
				setState(136); match(44);
				setState(137); identifier();
				setState(138); sort();
				setState(139); match(20);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_bindingContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode SYMBOL() { return getToken(smtlibParser.SYMBOL, 0); }
		public Var_bindingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_binding; }
	}

	public final Var_bindingContext var_binding() throws RecognitionException {
		Var_bindingContext _localctx = new Var_bindingContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_var_binding);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); match(41);
			setState(144); match(SYMBOL);
			setState(145); term();
			setState(146); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sorted_varContext extends ParserRuleContext {
		public SortContext sort() {
			return getRuleContext(SortContext.class,0);
		}
		public TerminalNode SYMBOL() { return getToken(smtlibParser.SYMBOL, 0); }
		public Sorted_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sorted_var; }
	}

	public final Sorted_varContext sorted_var() throws RecognitionException {
		Sorted_varContext _localctx = new Sorted_varContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sorted_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148); match(41);
			setState(149); match(SYMBOL);
			setState(150); sort();
			setState(151); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public Var_bindingContext var_binding(int i) {
			return getRuleContext(Var_bindingContext.class,i);
		}
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public List<Sorted_varContext> sorted_var() {
			return getRuleContexts(Sorted_varContext.class);
		}
		public List<Var_bindingContext> var_binding() {
			return getRuleContexts(Var_bindingContext.class);
		}
		public Qual_identifierContext qual_identifier() {
			return getRuleContext(Qual_identifierContext.class,0);
		}
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public Sorted_varContext sorted_var(int i) {
			return getRuleContext(Sorted_varContext.class,i);
		}
		public Spec_constantContext spec_constant() {
			return getRuleContext(Spec_constantContext.class,0);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_term);
		int _la;
		try {
			setState(210);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(153); spec_constant();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154); qual_identifier();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(155); match(41);
				setState(156); qual_identifier();
				setState(158); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(157); term();
					}
					}
					setState(160); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( ((((_la - 41)) & ~0x3f) == 0 && ((1L << (_la - 41)) & ((1L << (41 - 41)) | (1L << (NUMERAL - 41)) | (1L << (DECIMAL - 41)) | (1L << (HEXADECIMAL - 41)) | (1L << (BINARY - 41)) | (1L << (STRING - 41)) | (1L << (SYMBOL - 41)))) != 0) );
				setState(162); match(20);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(164); match(41);
				setState(165); match(49);
				setState(166); match(41);
				setState(168); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(167); var_binding();
					}
					}
					setState(170); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==41 );
				setState(172); match(20);
				setState(173); term();
				setState(174); match(20);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(176); match(41);
				setState(177); match(65);
				setState(178); match(41);
				setState(180); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(179); sorted_var();
					}
					}
					setState(182); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==41 );
				setState(184); match(20);
				setState(185); term();
				setState(186); match(20);
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(188); match(41);
				setState(189); match(69);
				setState(190); match(41);
				setState(192); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(191); sorted_var();
					}
					}
					setState(194); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==41 );
				setState(196); match(20);
				setState(197); term();
				setState(198); match(20);
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(200); match(41);
				setState(201); match(32);
				setState(202); term();
				setState(204); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(203); attribute();
					}
					}
					setState(206); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==KEYWORD );
				setState(208); match(20);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sort_symbol_declContext extends ParserRuleContext {
		public TerminalNode NUMERAL() { return getToken(smtlibParser.NUMERAL, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public Sort_symbol_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sort_symbol_decl; }
	}

	public final Sort_symbol_declContext sort_symbol_decl() throws RecognitionException {
		Sort_symbol_declContext _localctx = new Sort_symbol_declContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sort_symbol_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(212); match(41);
			setState(213); identifier();
			setState(214); match(NUMERAL);
			setState(218);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KEYWORD) {
				{
				{
				setState(215); attribute();
				}
				}
				setState(220);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(221); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Meta_spec_constantContext extends ParserRuleContext {
		public Meta_spec_constantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_meta_spec_constant; }
	}

	public final Meta_spec_constantContext meta_spec_constant() throws RecognitionException {
		Meta_spec_constantContext _localctx = new Meta_spec_constantContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_meta_spec_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(223);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 13) | (1L << 19) | (1L << 22))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fun_symbol_declContext extends ParserRuleContext {
		public Meta_spec_constantContext meta_spec_constant() {
			return getRuleContext(Meta_spec_constantContext.class,0);
		}
		public List<SortContext> sort() {
			return getRuleContexts(SortContext.class);
		}
		public SortContext sort(int i) {
			return getRuleContext(SortContext.class,i);
		}
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Spec_constantContext spec_constant() {
			return getRuleContext(Spec_constantContext.class,0);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public Fun_symbol_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fun_symbol_decl; }
	}

	public final Fun_symbol_declContext fun_symbol_decl() throws RecognitionException {
		Fun_symbol_declContext _localctx = new Fun_symbol_declContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_fun_symbol_decl);
		int _la;
		try {
			setState(262);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(225); match(41);
				setState(226); spec_constant();
				setState(227); sort();
				setState(231);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==KEYWORD) {
					{
					{
					setState(228); attribute();
					}
					}
					setState(233);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(234); match(20);
				}
				break;
